Thu Oct 15 13:59:30 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* bisection.c, falsepos.c, secant.c: reordered the tests so that
 	the minimum number of function evaluations are performed when
 	there is an early exit due to one of the supplied limits lying on
 	a root.

Fri Aug 21 14:48:13 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test.c: clean up of tests to get rid of warnings

Thu Aug 20 10:21:15 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* roots.h (_WITHIN_TOL): added extra parens in macro definition,
 	for safety

	* falsepos.c (gsl_root_falsepos): removed test for absolute
 	equality and replaced by a flag indicating which variables
 	changed.

	* test.c (main): simplified the tests, removed command line
 	arguments (can use the debugger to select which ones to run)

Mon Jun 15 22:22:54 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* started to eliminate void * arguments for function types (they
 	are not a good idea and can easily be specified)

1998-02-09  Mark Galassi  <rosalia@cygnus.com>

	* test.c (main): added an extra argument so that the $(srcdir) can
	be passed along when "make check" is run in a separate build
	directory.

	* test-macros, test-secant, test-bisection, test-newton,
	test-falsepos: modified these to use build and source directories
	explicitly.  Now "make check" in a separate build directory works.

1998-02-02  Mark Galassi  <rosalia@cygnus.com>

	* Makefile.am (TESTS): added $(srcdir) before these scripts, since
	the TESTS target picks things from the build directory.