@@ -42,6 +42,7 @@ gsl_root_falsepos (double *root, double (*f) (double),
   if (fl == 0.0)
     {
       *root = *lower_bound;
+      *upper_bound = *lower_bound;
       return GSL_SUCCESS;
     }
 
@@ -50,6 +51,7 @@ gsl_root_falsepos (double *root, double (*f) (double),
   if (fu == 0.0)
     {
       *root = *upper_bound;
+      *lower_bound = *upper_bound;
       return GSL_SUCCESS;
     }
 
@@ -82,6 +84,8 @@ gsl_root_falsepos (double *root, double (*f) (double),
       if (fs == 0.0)
 	{
 	  *root = splitpoint;
+	  *lower_bound = splitpoint;
+	  *upper_bound = splitpoint;
 	  return GSL_SUCCESS;
 	}
       
